--- a/host_vars/laptop/arch.yml
+++ b/host_vars/laptop/arch.yml
@@ -11,6 +11,7 @@ host_pacman_packages:
   - powertop
   - sof-firmware
   - upower
+  - wireless-regdb
 
 pacman_packages: "{{ base_pacman_packages + host_pacman_packages }}"
 aur_packages: "{{ base_aur_packages + host_aur_packages }}"
@@ -68,7 +69,10 @@ sbctl_sign_files:
 
 firewalld_zones:
   - name: public
-    interfaces: ["wlan0"]
+    interfaces:
+      - wlan0
+      - enp0s31f6
+      - enp84s0u1
 
   - name: home
     sources: "{{ home_net | dict2items | json_query('[].value.cidr') }}"
