Force handlers in ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,7 @@ filter_plugins = filter_plugins
 vault_password_file = .secrets/vault_key
 library = ./library
 host_key_checking = False
+force_handlers = True
 
 [inventory]
 enable_plugins = vmware_vm_inventory,ini
