Add cups role, more printer stuff for laptop

--- a/host_vars/laptop/arch.yml
+++ b/host_vars/laptop/arch.yml
@@ -10,6 +10,7 @@ host_pacman_packages:
   - libva-intel-driver
   - powertop
   - sof-firmware
+  - system-config-printer
   - upower
   - wireless-regdb
 
