--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -38,6 +38,11 @@ prometheus_node_static_config:
       instance: "{{ drepi_label }}"
       __metrics_path__: /metrics
 
+  - targets: ["{{ hostvars['truenas'].local_ips.vm }}:9100"]
+    labels:
+      instance: "{{ hostvars['truenas'].inventory_hostname }}"
+      __metrics_path__: /metrics
+
 prometheus_scrape_configs_runtime: []
 # Workaround vars set during role runtime, prometheus_metrics_path for example
 prometheus_scrape_configs: "{{ prometheus_scrape_configs_static + prometheus_scrape_configs_runtime }}"
