--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -24,3 +24,5 @@ locale_conf:
   LC_TIME: en_GB.UTF-8
 
 systemd_script_install_path: "/usr/local/bin/systemd"
+
+s3_url: "https://truenas.{{ hostvars['webgw01'].domains[1] }}:9000"
