--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -8,6 +8,10 @@ __dresrv: "{{ hostvars['dresrv'] }}"
 
 prometheus_port: 9090
 prometheus_storage_retention: "365d"
+prometheus_config_flags_extra:
+  # Compaction must be disabled for Thanos to work
+  "storage.tsdb.min-block-duration": "2h"
+  "storage.tsdb.max-block-duration": "2h"
 prometheus_web_listen_address: "0.0.0.0:{{ prometheus_port }}"
 prometheus_global:
   scrape_interval: 15s
