--- a/roles/postgres_exporter/tasks/install.yml
+++ b/roles/postgres_exporter/tasks/install.yml
@@ -29,20 +29,12 @@
   check_mode: false
   delegate_to: localhost
 
-- name: "Get checksum for {{ go_arch }} architecture"
-  set_fact:
-    __postgres_exporter_checksum: "{{ item.split(' ')[0] }}"
-  with_items: "{{ __postgres_exporter_checksums }}"
-  when:
-    - "('linux-' + go_arch + '.tar.gz') in item"
-  delegate_to: localhost
-
 - name: download postgres_exporter binary to local folder
   become: false
   get_url:
     url: "https://github.com/prometheus-community/postgres_exporter/releases/download/v{{ postgres_exporter_version }}/postgres_exporter-{{ postgres_exporter_version }}.linux-{{ go_arch }}.tar.gz"
     dest: "/tmp/postgres_exporter-{{ postgres_exporter_version }}.linux-{{ go_arch }}.tar.gz"
-    checksum: "sha256:{{ __postgres_exporter_checksum }}"
+    checksum: "sha256:{{ (__postgres_exporter_checksums | select('search', 'linux-' + go_arch + '.tar.gz') | first).split()[0] }}"
   register: _download_archive
   until: _download_archive is succeeded
   retries: 5
