--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 roles_path = roles
-inventory = hosts
+inventory = hosts,kubespray/inventory/vsphere/inventory.ini
 filter_plugins = filter_plugins
 vault_password_file = .secrets/vault_key
 library = ./library
