--- a/host_vars/desktop/chezmoi.yml
+++ b/host_vars/desktop/chezmoi.yml
@@ -7,11 +7,11 @@ chezmoi_overrides:
   i3: |
     WS["2"]="no-discord"
   polybar: |
-    DPI_MAP["DP-2"]="144"
+    DPI_MAP["DP-0"]="144"
   xorg: |
     DPI=120
-    MONITOR_MAP["DP-4"]="--primary --mode 3840x2160 --rate 144"
-    MONITOR_MAP["DP-2"]="--above DP-4"
+    MONITOR_MAP["DP-2"]="--primary --mode 3840x2160 --rate 144"
+    MONITOR_MAP["DP-0"]="--above DP-4"
     MONITOR_MAP["HDMI-0"]="--off"
   xinitrc: |
     QT_AUTO_SCREEN_SCALE_FACTOR="1"
@@ -19,3 +19,4 @@ chezmoi_overrides:
     MOUSE_NAME="pointer:Logitech G502"
     NVIDIA_CORE_OFFSET="100"
     NVIDIA_MEM_OFFSET="1500"
+    USE_AUTORANDR=0
