--- a/host_vars/romsto/vars.yml
+++ b/host_vars/romsto/vars.yml
@@ -7,3 +7,4 @@ scrape_pass: "{{ vault_scrape_pass }}"
 scrape_user: "{{ vault_scrape_user }}"
 ssh_port: "{{ vault_ssh_port }}"
 syncthing_port: "{{ vault_syncthing_port }}"
+cadvisor_port: "9101"
